FEAT: añadidos datos de prueba para subasta (vista dinamica ppal)